--- a/src/db/package.json
+++ b/src/db/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "db",
+  "name": "makaksi-db",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "main.js",
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Mapagmataas",
+  "license": "ISC",
+  "dependencies": {
+    "firebase": "^9.15.0"
+  }
 }
