--- a/src/db/package.json
+++ b/src/db/package.json
@@ -5,7 +5,7 @@
   "author": "mapagmataas",
   "license": "ISC",
   "dependencies": {
-    "fingerprintjs2": "^2.1.4",
+    "@fingerprintjs/fingerprintjs": "^3.4.0",
     "firebase": "^9.19.1"
   },
   "scripts": {
