--- a/src/_module/package.json
+++ b/src/_module/package.json
@@ -5,6 +5,8 @@
   "main": "main.js",
   "scripts": {
     "wp": "webpack -c .\\webpack.config.js",
+    "gd": "npm i -g webpack@latest && npm i -g webpack-cli@latest",
+    "dup": "npm update firebase && npm update @fingerprintjs/fingerprintjs && npm update bcryptjs && npm update crypto-browserify && npm update stream-browserify && npm update events && npm update buffer",
     "din": "npm i firebase@latest && npm i @fingerprintjs/fingerprintjs@latest && npm i bcryptjs@latest && npm i crypto-browserify@latest && npm i stream-browserify@latest && npm i events@latest && npm i buffer@latest",
     "dun": "npm uninstall firebase@latest && npm uninstall @fingerprintjs/fingerprintjs@latest && npm uninstall bcryptjs@latest && npm uninstall crypto-browserify@latest && npm uninstall stream-browserify@latest && npm uninstall events@latest && npm uninstall buffer@latest"
   },
