--- a/package.json
+++ b/package.json
@@ -1,32 +1,68 @@
 {
-  "name": "ma",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "pret": "prettier . --write",
-    "prev": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "firebase": "^10.5.2",
-    "prettier": "3.0.3",
-    "sass": "^1.69.5",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
-  }
+	"name": "ma",
+	"version": "1.0.0",
+	"description": "Mapagmataas' website",
+	"author": "Mapagmataas",
+	"homepage": "https://ma.cyou",
+	"repository": "github:mapagmataas1331/ma",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"deploy": "gh-pages -d build -t true",
+		"preview": "vite preview",
+		"preview:gh": "http-server build",
+		"validate": "npm run check && prettier --write . && eslint .",
+		"test": "npm run test:integration && npm run test:unit && npm run test:e2e && npm run test:unit -- --run",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write .",
+		"test:integration": "playwright test",
+		"test:unit": "vitest",
+		"test:e2e": "playwright test"
+	},
+	"devDependencies": {
+		"@internationalized/date": "^3.5.6",
+		"@playwright/test": "^1.48.0",
+		"@sveltejs/adapter-static": "^3.0.5",
+		"@sveltejs/kit": "^2.7.0",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@tsconfig/svelte": "^5.0.4",
+		"@types/eslint": "^9.6.1",
+		"@types/node": "^22.7.5",
+		"autoprefixer": "^10.4.20",
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
+		"embla-carousel-svelte": "^8.3.0",
+		"eslint": "^9.12.0",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-svelte": "^2.44.1",
+		"formsnap": "^1.0.1",
+		"gh-pages": "^6.2.0",
+		"lucide-svelte": "^0.452.0",
+		"mode-watcher": "^0.4.1",
+		"paneforge": "^0.0.6",
+		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.7",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"sass": "^1.79.5",
+		"svelte": "^5.0.0-next.262",
+		"svelte-check": "^4.0.5",
+		"svelte-radix": "^1.1.1",
+		"svelte-sonner": "^0.3.28",
+		"sveltekit-superforms": "^2.19.1",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.6.3",
+		"typescript-eslint": "^8.9.0",
+		"vaul-svelte": "^0.3.2",
+		"vite": "^5.4.9",
+		"vitest": "^2.1.3",
+		"zod": "^3.23.8"
+	},
+	"type": "module"
 }
