--- a/package.json
+++ b/package.json
@@ -24,43 +24,43 @@
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.5.6",
-		"@playwright/test": "^1.48.0",
+		"@playwright/test": "^1.48.1",
 		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.7.0",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@tsconfig/svelte": "^5.0.4",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.7.5",
+		"@types/node": "^22.7.9",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
 		"embla-carousel-svelte": "^8.3.0",
-		"eslint": "^9.12.0",
+		"eslint": "^9.13.0",
 		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.44.1",
+		"eslint-plugin-svelte": "^2.46.0",
 		"formsnap": "^1.0.1",
 		"gh-pages": "^6.2.0",
-		"lucide-svelte": "^0.452.0",
+		"lucide-svelte": "^0.453.0",
 		"mode-watcher": "^0.4.1",
 		"paneforge": "^0.0.6",
 		"postcss": "^8.4.47",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"sass": "^1.79.5",
-		"svelte": "^5.0.0-next.262",
+		"sass": "^1.80.4",
+		"svelte": "^5.1.0",
 		"svelte-check": "^4.0.5",
 		"svelte-radix": "^1.1.1",
 		"svelte-sonner": "^0.3.28",
-		"sveltekit-superforms": "^2.19.1",
+		"sveltekit-superforms": "^2.20.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.13",
+		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.9.0",
+		"typescript-eslint": "^8.11.0",
 		"vaul-svelte": "^0.3.2",
-		"vite": "^5.4.9",
+		"vite": "^5.4.10",
 		"vitest": "^2.1.3",
 		"zod": "^3.23.8"
 	},
