--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"homepage": "https://ma.cyou",
 	"repository": "github:mapagmataas1331/ma",
 	"private": true,
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -13,44 +14,37 @@
 		"deploy": "gh-pages -d build -t true",
 		"preview": "vite preview",
 		"preview:gh": "http-server build",
-		"validate": "npm run check && prettier --write . && eslint .",
-		"test": "npm run test:integration && npm run test:unit && npm run test:e2e && npm run test:unit -- --run",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
-		"test:integration": "playwright test",
-		"test:unit": "vitest",
-		"test:e2e": "playwright test"
+		"lint": "prettier --check . && eslint .",
+		"validate": "npm run check && prettier --write . && eslint ."
 	},
 	"devDependencies": {
 		"@internationalized/date": "^3.5.6",
-		"@playwright/test": "^1.48.2",
 		"@sveltejs/adapter-static": "^3.0.6",
-		"@sveltejs/kit": "^2.7.3",
+		"@sveltejs/kit": "^2.8.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@tsconfig/svelte": "^5.0.4",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.8.2",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "^1.0.0-next.46",
 		"clsx": "^2.1.1",
-		"cmdk-sv": "^0.0.18",
 		"embla-carousel-svelte": "^8.3.1",
-		"eslint": "^9.13.0",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
-		"formsnap": "^1.0.1",
+		"formsnap": "^2.0.0-next.1",
 		"gh-pages": "^6.2.0",
+		"globals": "^15.12.0",
 		"lucide-svelte": "^0.454.0",
 		"mode-watcher": "^0.4.1",
-		"paneforge": "^0.0.6",
-		"postcss": "^8.4.47",
+		"paneforge": "^1.0.0-next.1",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
 		"prettier-plugin-tailwindcss": "^0.6.8",
-		"sass": "^1.80.4",
-		"svelte": "^5.1.4",
+		"sass-embedded": "^1.80.6",
+		"svelte": "^5.1.12",
 		"svelte-check": "^4.0.5",
 		"svelte-radix": "^2.0.1",
 		"svelte-sitemap": "^2.6.0",
@@ -59,12 +53,11 @@
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.14",
+		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.12.1",
-		"vaul-svelte": "^0.3.2",
+		"typescript-eslint": "^8.13.0",
+		"vaul-svelte": "^1.0.0-next.2",
 		"vite": "^5.4.10",
-		"vitest": "^2.1.4",
 		"zod": "^3.23.8"
-	},
-	"type": "module"
+	}
 }
