--- a/components.json
+++ b/components.json
@@ -3,7 +3,7 @@
 	"style": "new-york",
 	"tailwind": {
 		"config": "tailwind.config.ts",
-		"css": "src\\app.css",
+		"css": "src\\app.scss",
 		"baseColor": "zinc"
 	},
 	"aliases": {
